--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,19 +2,18 @@ name: Deploy Lambda to AWS
 
 on:
   push:
-    branches: [main, master]  # Ajusta según tu rama principal
+    branches: [main, master]
   workflow_dispatch:
 
 env:
   AWS_REGION: us-east-1
   STACK_NAME: order-function-stack
   LAMBDA_PACKAGE_KEY: order_function.zip
+  BUCKET_NAME: order-function-deploy-654654589924-us-east-1
 
-  # Variables de entorno (se espera que estén en Secrets)
   REST_API_ID: ${{ secrets.REST_API_ID }}
   ORDER_RESOURCE_ID: ${{ secrets.ORDER_RESOURCE_ID }}
   ROOT_RESOURCE_ID: ${{ secrets.ROOT_RESOURCE_ID }}
-  AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
 
 jobs:
   deploy:
@@ -44,50 +43,6 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
-
-      - name: 🧹 Eliminar stack en estado ROLLBACK_COMPLETE (si aplica)
-        run: |
-          state=$(aws cloudformation describe-stacks \
-            --stack-name "$STACK_NAME" \
-            --query "Stacks[0].StackStatus" \
-            --output text 2>/dev/null || echo "")
-          if [ "$state" == "ROLLBACK_COMPLETE" ]; then
-            echo "⚠️ Stack en estado ROLLBACK_COMPLETE. Eliminando..."
-            aws cloudformation delete-stack --stack-name "$STACK_NAME"
-            aws cloudformation wait stack-delete-complete --stack-name "$STACK_NAME"
-            echo "✅ Stack eliminado. Listo para recrear."
-          else
-            echo "🧾 Estado actual del stack: $state"
-          fi
-
-      - name: 🔍 Determinar nombre del bucket
-        id: getbucket
-        run: |
-          bucket=$(aws cloudformation describe-stacks \
-            --stack-name "$STACK_NAME" \
-            --query "Stacks[0].Outputs[?OutputKey=='LambdaBucketName'].OutputValue" \
-            --output text 2>/dev/null || echo "")
-          if [ -z "$bucket" ] || [ "$bucket" == "None" ]; then
-            bucket="order-function-deploy-${{ env.AWS_ACCOUNT_ID }}-${{ env.AWS_REGION }}"
-            echo "🆕 Usando bucket por defecto: $bucket"
-          else
-            echo "✅ Usando bucket del stack existente: $bucket"
-          fi
-          echo "bucket_name=$bucket" >> $GITHUB_OUTPUT
-          echo "BUCKET_NAME=$bucket" >> $GITHUB_ENV
-
-      - name: 🪣 Crear bucket si no existe
-        run: |
-          if aws s3api head-bucket --bucket "$BUCKET_NAME" 2>/dev/null; then
-            echo "✅ Bucket $BUCKET_NAME ya existe"
-          else
-            echo "🚀 Creando bucket $BUCKET_NAME..."
-            if [ "$AWS_REGION" = "us-east-1" ]; then
-              aws s3api create-bucket --bucket "$BUCKET_NAME"
-            else
-              aws s3api create-bucket --bucket "$BUCKET_NAME" --region "$AWS_REGION" --create-bucket-configuration LocationConstraint="$AWS_REGION"
-            fi
-          fi
 
       - name: ☁️ Subir ZIP a S3
         run: |
