se ajusta swagger

--- a/app/src/AWSLambda/AWSLambda.csproj
+++ b/app/src/AWSLambda/AWSLambda.csproj
@@ -38,7 +38,8 @@
   </ItemGroup>
 
     <ItemGroup>
-        <EmbeddedResource Include="docs\swagger.json" />
+      <EmbeddedResource Include="docs\swagger.json" />
+      <EmbeddedResource Include="docs\swagger-ui\**\*" />
     </ItemGroup>
 
 
