se ajusta swagger

--- a/app/src/AWSLambda/AWSLambda.csproj
+++ b/app/src/AWSLambda/AWSLambda.csproj
@@ -45,6 +45,11 @@
       <EmbeddedResource Include="docs\swagger-ui\**\*" />
     </ItemGroup>
 
-    <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+	<PropertyGroup>
+		<OutputType>Library</OutputType>
+	</PropertyGroup>
+
+
+	<ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
