--- a/cloudformation/template.yml
+++ b/cloudformation/template.yml
@@ -21,6 +21,8 @@ Parameters:
 Resources:
   OrderFunction:
     Type: AWS::Lambda::Function
+    DependsOn:
+      - LambdaLogGroup
     Properties:
       FunctionName: order_function
       Handler: AWSLambda::Function::FunctionHandler
@@ -157,6 +159,13 @@ Resources:
     Properties:
       RestApiId: !Ref RestApiId
       StageName: dev
+
+  LambdaLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub /aws/lambda/${OrderFunction}
+      RetentionInDays: 14
+
 
 Outputs:
   LambdaFunctionName:
