--- a/cloudformation/template.yml
+++ b/cloudformation/template.yml
@@ -164,6 +164,23 @@ Resources:
       LogGroupName: !Sub /aws/lambda/${OrderFunction}
       RetentionInDays: 14
 
+  OrderFunctionPolicy:
+    Type: AWS::IAM::Policy
+    Properties:
+      PolicyName: OrderFunctionDynamoPolicy
+      Roles:
+        - lamb_gamboa-role-w0fpkkqf
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Action:
+              - dynamodb:GetItem
+              - dynamodb:PutItem
+              - dynamodb:UpdateItem
+              - dynamodb:DeleteItem
+            Resource: arn:aws:dynamodb:us-east-1:654654589924:table/orders
+
 Outputs:
   LambdaFunctionName:
     Description: Nombre de la función Lambda
