--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -58,4 +58,6 @@ jobs:
               LambdaS3Key=$LAMBDA_PACKAGE_KEY \
               RestApiId=$REST_API_ID \
               OrderResourceId=$ORDER_RESOURCE_ID \
-              RootResourceId=$ROOT_RESOURCE_ID
+              RootResourceId=$ROOT_RESOURCE_ID \
+              LambdaExecutionRole=arn:aws:iam::654654589924:role/service-role/lamb_gamboa-role-w0fpkkqf
+
