--- a/cloudformation/template.yml
+++ b/cloudformation/template.yml
@@ -10,10 +10,6 @@ Parameters:
     Type: String
     Description: ID del API Gateway REST ya creado
 
-  OrderResourceId:
-    Type: String
-    Description: ID del recurso /api/order en el API Gateway
-
   RootResourceId:
     Type: String
     Description: ID del recurso raíz / en el API Gateway
@@ -23,6 +19,14 @@ Parameters:
     Description: ARN del rol IAM existente que usará la función Lambda
 
 Resources:
+  # ✅ Crea /api/order automáticamente
+  OrderResource:
+    Type: AWS::ApiGateway::Resource
+    Properties:
+      RestApiId: !Ref RestApiId
+      ParentId: !Ref RootResourceId
+      PathPart: order
+
   OrderFunction:
     Type: AWS::Lambda::Function
     Properties:
@@ -65,7 +69,7 @@ Resources:
     Type: AWS::ApiGateway::Method
     Properties:
       RestApiId: !Ref RestApiId
-      ResourceId: !Ref OrderResourceId
+      ResourceId: !Ref OrderResource
       HttpMethod: GET
       AuthorizationType: NONE
       Integration:
@@ -77,7 +81,7 @@ Resources:
     Type: AWS::ApiGateway::Method
     Properties:
       RestApiId: !Ref RestApiId
-      ResourceId: !Ref OrderResourceId
+      ResourceId: !Ref OrderResource
       HttpMethod: POST
       AuthorizationType: NONE
       Integration:
@@ -89,7 +93,7 @@ Resources:
     Type: AWS::ApiGateway::Method
     Properties:
       RestApiId: !Ref RestApiId
-      ResourceId: !Ref OrderResourceId
+      ResourceId: !Ref OrderResource
       HttpMethod: PUT
       AuthorizationType: NONE
       Integration:
@@ -101,7 +105,7 @@ Resources:
     Type: AWS::ApiGateway::Method
     Properties:
       RestApiId: !Ref RestApiId
-      ResourceId: !Ref OrderResourceId
+      ResourceId: !Ref OrderResource
       HttpMethod: DELETE
       AuthorizationType: NONE
       Integration:
@@ -114,7 +118,7 @@ Resources:
     Type: AWS::ApiGateway::Resource
     Properties:
       RestApiId: !Ref RestApiId
-      ParentId: !Ref OrderResourceId
+      ParentId: !Ref OrderResource
       PathPart: swagger
 
   GetSwaggerMethod:
@@ -134,7 +138,7 @@ Resources:
     Type: AWS::ApiGateway::Resource
     Properties:
       RestApiId: !Ref RestApiId
-      ParentId: !Ref OrderResourceId
+      ParentId: !Ref OrderResource
       PathPart: ui
 
   GetSwaggerUIMethod:
