--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -58,5 +58,5 @@ jobs:
               LambdaS3Key=$LAMBDA_PACKAGE_KEY \
               RestApiId=$REST_API_ID \
               RootResourceId=$ROOT_RESOURCE_ID \
-              LambdaExecutionRole=$LAMBDA_EXECUTION_ROLE
+              LambdaExecutionRole=arn:aws:iam::654654589924:role/service-role/lamb_gamboa-role-w0fpkkqf
 
