--- a/cloudformation/template.yml
+++ b/cloudformation/template.yml
@@ -162,17 +162,14 @@ Resources:
   GetUiProxyMethod:
     Type: AWS::ApiGateway::Method
     Properties:
+      RestApiId: !Ref RestApiId
+      ResourceId: !Ref UiProxyResource
       HttpMethod: GET
       AuthorizationType: NONE
-      ResourceId: !Ref UiProxyResource
-      RestApiId: !Ref RestApiId
       Integration:
         Type: AWS_PROXY
         IntegrationHttpMethod: POST
-        Uri: !Sub
-          - arn:aws:apigateway:${Region}:lambda:path/2015-03-31/functions/${LambdaArn}/invocations
-          - Region: !Ref AWS::Region
-            LambdaArn: !GetAtt OrderFunction.Arn
+        Uri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${OrderFunction.Arn}/invocations
 
   DevDeployment:
     Type: AWS::ApiGateway::Deployment
