Se ajusta el template para que no toque el rol

--- a/app/src/AWSLambda/AWSLambda.csproj
+++ b/app/src/AWSLambda/AWSLambda.csproj
@@ -41,11 +41,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="docs\swagger.json" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Include="docs\swagger-ui\**\*" />
+    <EmbeddedResource Include="docs/swagger.json" />
+    <EmbeddedResource Include="docs/swagger-ui/**/*" />
   </ItemGroup>
 
 	<PropertyGroup>
