Se agrega validacion de token

--- a/cloudformation/template.yml
+++ b/cloudformation/template.yml
@@ -134,6 +134,7 @@ Resources:
       - PostOrderMethod
       - PutOrderMethod
       - DeleteOrderMethod
+      - OptionsOrderMethod
     Properties:
       RestApiId: !Ref RestApiId
       StageName: dev
